--- a/CountryGuide.html
+++ b/CountryGuide.html
@@ -10,14 +10,35 @@
 <div class = "CountryList">
 <h1>List of Countries</h1>
 <ul>
+	<li>Australia</li>
 	<li><a href = "BrazilGuide.html">Brazil</a></li>
+	<li>Canada</li>
+	<li>China</li>
 	<li>Croatia</li>
 	<li>England</li>
+	<li>Egypt</li>
 	<li>France</li>
 	<li>Greece</li>
 	<li>Indonesia</li>
+	<li>Ireland</li>
 	<li>Italy</li>
+	<li>Germany</li>
+	<li>Jamaica</li>
 	<li>Japan</li>
+	<li>Korea</li>
+	<li>Mexico</li>
+	<li>Morocco</li>
+	<li>Netherlands</li>
+	<li>New Zealand</li>
+	<li>Peru</li>
+	<li>Singapore</li>
+	<li>South Africa</li>
+	<li>Spain</li>
+	<li>Sri Lanka</li>
+	<li>Switzerland</li>
+	<li>Sweden</li>
+	<li>Thailand</li>
+	<li>Turkey</li>
 </ul>
 </div>
 </body>
