--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -12,7 +12,7 @@
               <ul>
                   <li> <a href='#'>Flights</a></li>
                   <li> <a href='#'>Food and drink</a></li>
-                  <li> <a href='#'>Country guides</a></li>
+                  <li> <a href="CountryGuide.html">Country guides</a></li>
                   <li> <a href='#'>City guides</a></li>
                   <li> <a href='#'>About us</a></li>
               </ul>
