--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
-<h1>Some Cities in Brazil</h1>
+<div class = "CountryList">
+<h1>Popular Cities in Brazil</h1>
+<br>
+<h3>Places to Visit in Rio de Janeiro</h3>
+<div class = "row">
+	<div class = "column">
+		<img src = "ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 70% width: 75%">
+	</div>
+	<div class = "column">
+		<img src = "CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
+	</div>
+	<div class = "column">
+		<img src = "RioCarnival2023Image.png" alt = "Rio Carnival 2023" style = "width: 75%">
+	</div>
+</div>
+<br>
+<h3>Places to Visit in São Paulo</h3>
+
+<br>
+<h3>Places to Visit in Manaus</h3>
+</div>
 </body>
 </html>
