--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -8,6 +8,8 @@
         <div class="Banner">
            <p>Guidance for any people who love travelling!</p>
            <p>The journey of a thousand miles begins with a single step.</p>
+		   <button type="button">Click Here to Sort the Links</button>
+		   <button type="button">Click Here to Filter the Links</button>
           <div class="links">
               <ul>
                   <li> <a href='#'>Flights</a></li>
