--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -13,7 +13,7 @@
 <h3>Places to Visit in Rio de Janeiro</h3>
 <div class = "row">
 	<div class = "column">
-		<img src = "ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 70% width: 75%">
+		<img src = "ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 80% width: 75%">
 	</div>
 	<div class = "column">
 		<img src = "CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
@@ -24,7 +24,17 @@
 </div>
 <br>
 <h3>Places to Visit in São Paulo</h3>
-
+<div class = "row">
+	<div class = "column">
+		<img src = "" alt = "São Paulo Museum of Art" style = "height: 80% width: 75%">
+	</div>
+	<div class = "column">
+		<img src = "" alt = "Museu do Futebol" style = "width: 75%">
+	</div>
+	<div class = "column">
+		<img src = "" alt = "Ibirapuera Park" style = "width: 75%">
+	</div>
+</div>
 <br>
 <h3>Places to Visit in Manaus</h3>
 </div>
