--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -11,32 +11,47 @@
 <h1>Popular Cities in Brazil</h1>
 <br>
 <h3>Places to Visit in Rio de Janeiro</h3>
+<br>
 <div class = "row">
 	<div class = "column">
 		<img src = "ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 80% width: 75%">
+		<p>Christ The Redeemer Statue</p>
 	</div>
 	<div class = "column">
 		<img src = "CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
+		<p>Copacabana</p>
 	</div>
 	<div class = "column">
 		<img src = "RioCarnival2023Image.png" alt = "Rio Carnival 2023" style = "width: 75%">
+		<p>Rio Carnival 2023</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in São Paulo</h3>
+<br>
 <div class = "row">
 	<div class = "column">
 		<img src = "" alt = "São Paulo Museum of Art" style = "height: 80% width: 75%">
+		<p>São Paulo Museum of Art</p>
 	</div>
 	<div class = "column">
 		<img src = "" alt = "Museu do Futebol" style = "width: 75%">
+		<p>Museu do Futebol</p>
 	</div>
 	<div class = "column">
 		<img src = "" alt = "Ibirapuera Park" style = "width: 75%">
+		<p>Ibirapuera Park</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Manaus</h3>
+<br>
+<div class = "row">
+	<div class = "column">
+		<img src = "" alt = "Anavilhanas National Park" style = "width: 75%">
+		<p>Anavilhanas National Park</p>
+	</div>
+</div>
 </div>
 </body>
 </html>
