--- a/CountryGuide.html
+++ b/CountryGuide.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<h4 align="right"><a href = "TravelGuide.html">Back to Home</a><h4>
 <div class = "CountryList">
 <h1>List of Countries</h1>
 <ul>
