--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -8,6 +8,7 @@
 
 <body>
 <div class = "CountryList">
+<h4 align="right"><a href = "TravelGuide.html">Back to Home</a><h4>
 <h1>Popular Cities in Brazil</h1>
 <br>
 <h3>Places to Visit in Rio de Janeiro</h3>
