--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -12,9 +12,9 @@
 		   <button type="button">Click Here to Filter the Links</button>
           <div class="links">
               <ul>
-                  <li> <a href='#'>Flights</a></li>
+                  <li> <a href="https://www.booking.com/index.html?aid=309654;label=booking-be-en-us-LTXkLmvAYJ_j203cfWaglgS166194690622:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tikwd-56055241:lp9015640:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfEJgM0tLgqCMTprUbY_PUk38zgE6d-CJqb_EHy7iCgtOv4T6n2YcJIaAnjGEALw_wcB">Book Your Trip Here!</a></li>
                   <li> <a href='#'>Food and drink</a></li>
-                  <li> <a href="CountryGuide.html">Country guides</a></li>
+                  <li> <a href="CountryGuide.html">Country Guides</a></li>
                   <li> <a href='#'>City guides</a></li>
                   <li> <a href='#'>About us</a></li>
               </ul>
