--- a/CountryGuide.html
+++ b/CountryGuide.html
@@ -11,7 +11,7 @@
 <div class = "CountryList">
 <h1>List of Countries</h1>
 <ul>
-	<li>Australia</li>
+	<li><a href = "AustraliaGuide.html">Australia</a></li>
 	<li><a href = "BrazilGuide.html">Brazil</a></li>
 	<li>Canada</li>
 	<li>China</li>
