--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -13,10 +13,44 @@
 	<br>
 	<h3>Places to Visit in Sydney</h3>
 	<br>
+	<div class = "row">
+		<div class = "column">
+			<img src = "" alt = "Sydney Opera House" style = "height: 80% width: 75%">
+			<p>Sydney Opera House</p>
+		</div>
+		<div class = "column">
+			<img src = "" alt = "Bondi Beach" style = "width: 75%">
+			<p>Bondi Beach</p>
+		</div>
+		<div class = "column">
+			<img src = "" alt = "Taronga Zoo Sydney" style = "width: 75%">
+			<p>Taronga Zoo Sydney</p>
+		</div>
+	</div>
 	<h3>Places to Visit in Melbourne</h3>
 	<br>
+	<div class = "row">
+		<div class = "column">
+			<img src = "" alt = "Queen Victoria Market" style = "height: 80% width: 75%">
+			<p>Queen Victoria Market</p>
+		</div>
+		<div class = "column">
+			<img src = "" alt = "National Gallery of Victoria" style = "width: 75%">
+			<p>National Gallergy of Victoria</p>
+		</div>
+	</div>
 	<h3>Places to Visit in Brisbane</h3>
 	<br>
+	<div class = "row">
+		<div class = "column">
+			<img src = "" alt = "Lone Pine Koala Sanctuary" style = "width: 75%">
+			<p>Lone Pine Koala Sanctuary</p>
+		</div>
+		<div class = "column">
+			<img src = "" alt = "Eat Street Northshore" style = "width: 75%">
+			<p>Eat Street Northshore</p>
+		</div>
+	</div>
 	</div>
 </body>
 </html>
