--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -15,15 +15,15 @@
 	<br>
 	<div class = "row">
 		<div class = "column">
-			<img src = "" alt = "Sydney Opera House" style = "height: 80% width: 75%">
+			<img src = "Images/Australia/SydneyOperaHouse.jpg" alt = "Sydney Opera House">
 			<p>Sydney Opera House</p>
 		</div>
 		<div class = "column">
-			<img src = "" alt = "Bondi Beach" style = "width: 75%">
+			<img src = "Images/Australia/BondiBeach.jpg" alt = "Bondi Beach">
 			<p>Bondi Beach</p>
 		</div>
 		<div class = "column">
-			<img src = "" alt = "Taronga Zoo Sydney" style = "width: 75%">
+			<img src = "Images/Australia/TarongaZooSydney.jpg" alt = "Taronga Zoo Sydney">
 			<p>Taronga Zoo Sydney</p>
 		</div>
 	</div>
@@ -31,23 +31,23 @@
 	<br>
 	<div class = "row">
 		<div class = "column">
-			<img src = "" alt = "Queen Victoria Market" style = "height: 80% width: 75%">
+			<img src = "Images/Australia/QueenVictoriaMarket.jpeg" alt = "Queen Victoria Market">
 			<p>Queen Victoria Market</p>
 		</div>
 		<div class = "column">
-			<img src = "" alt = "National Gallery of Victoria" style = "width: 75%">
-			<p>National Gallergy of Victoria</p>
+			<img src = "Images/Australia/NationalGalleryOfVictoria.png" alt = "National Gallery of Victoria">
+			<p>National Gallery of Victoria</p>
 		</div>
 	</div>
 	<h3>Places to Visit in Brisbane</h3>
 	<br>
 	<div class = "row">
 		<div class = "column">
-			<img src = "" alt = "Lone Pine Koala Sanctuary" style = "width: 75%">
+			<img src = "Images/Australia/LonePineKoalaSanctuary.jpeg" alt = "Lone Pine Koala Sanctuary">
 			<p>Lone Pine Koala Sanctuary</p>
 		</div>
 		<div class = "column">
-			<img src = "" alt = "Eat Street Northshore" style = "width: 75%">
+			<img src = "Images/Australia/EatStreetNorthshore.jpg" alt = "Eat Street Northshore">
 			<p>Eat Street Northshore</p>
 		</div>
 	</div>
