--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -15,15 +15,15 @@
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 80% width: 75%">
+		<img src = "Images/Brazil/ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 80% width: 75%">
 		<p>Christ The Redeemer Statue</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
+		<img src = "Images/Brazil/CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
 		<p>Copacabana</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/RioCarnival2023Image.png" alt = "Rio Carnival 2023" style = "width: 75%">
+		<img src = "Images/Brazil/RioCarnival2023Image.png" alt = "Rio Carnival 2023" style = "width: 75%">
 		<p>Rio Carnival 2023</p>
 	</div>
 </div>
@@ -32,15 +32,15 @@
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/SaoPauloMuseumOfArt.jpg" alt = "São Paulo Museum of Art" style = "height: 100% width: 100%">
+		<img src = "Images/Brazil/SaoPauloMuseumOfArt.jpg" alt = "São Paulo Museum of Art" style = "height: 100% width: 100%">
 		<p>São Paulo Museum of Art</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/MuseuDoFutebol.jpg" alt = "Museu do Futebol" style = "width: 75%">
+		<img src = "Images/Brazil/MuseuDoFutebol.jpg" alt = "Museu do Futebol" style = "width: 75%">
 		<p>Museu do Futebol</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/IbirapueraPark.jpg" alt = "Ibirapuera Park" style = "width: 75%">
+		<img src = "Images/Brazil/IbirapueraPark.jpg" alt = "Ibirapuera Park" style = "width: 75%">
 		<p>Ibirapuera Park</p>
 	</div>
 </div>
@@ -49,7 +49,7 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/AnavilhanasNationalPark.jpg" alt = "Anavilhanas National Park" style = "width: 25%">
+		<img src = "Images/Brazil/AnavilhanasNationalPark.jpg" alt = "Anavilhanas National Park" style = "width: 25%">
 		<p>Anavilhanas National Park</p>
 	</div>
 </div>
