--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -7,8 +7,52 @@
 </head>
 
 <body>
+<ul>
+	<li><a href = "AustraliaGuide.html">Australia</a></li>
+	<li><a href = "BrazilGuide.html">Brazil</a></li>
+	<li>Canada</li>
+	<li>China</li>
+	<li>Croatia</li>
+	<li>England</li>
+	<li>Egypt</li>
+	<li>France</li>
+	<li>Greece</li>
+	<li>Indonesia</li>
+	<li>Ireland</li>
+	<li>Italy</li>
+	<li>Germany</li>
+	<li>Jamaica</li>
+	<li>Japan</li>
+	<li>Korea</li>
+	<li>Mexico</li>
+	<li>Morocco</li>
+	<li>Netherlands</li>
+	<li>New Zealand</li>
+	<li>Peru</li>
+	<li>Singapore</li>
+	<li>South Africa</li>
+	<li>Spain</li>
+	<li>Sri Lanka</li>
+	<li>Switzerland</li>
+	<li>Sweden</li>
+	<li>Thailand</li>
+	<li>Turkey</li>
+</ul>
+
+<div class="topnav">
+  <a class="active" href="TravelGuide.html">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
+
+	<div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px;height:90%;overflow:auto;">
 	<div class = "CountryList">
-	<h4 align="right"><a href = "TravelGuide.html">Back to Home</a><h4>
 	<h1>Popular Cities in Australia</h1>
 	<br>
 	<h3>Places to Visit in Sydney</h3>
@@ -50,6 +94,7 @@
 			<img src = "Images/Australia/EatStreetNorthshore.jpg" alt = "Eat Street Northshore">
 			<p>Eat Street Northshore</p>
 		</div>
+	</div>
 	</div>
 	</div>
 </body>
