--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -4,23 +4,72 @@
     <title> TravelGuide </title>
         <link rel=stylesheet href="style.css">
         </head>
-        <body>
-        <div class="Banner">
-           <p>Guidance for any people who love travelling!</p>
-           <p>The journey of a thousand miles begins with a single step.</p>
-		   <button type="button">Click Here to Sort the Links</button>
-		   <button type="button">Click Here to Filter the Links</button>
-          <div class="links">
-              <ul>
-                  <li> <a href="https://www.booking.com/index.html?aid=309654;label=booking-be-en-us-LTXkLmvAYJ_j203cfWaglgS166194690622:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tikwd-56055241:lp9015640:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfEJgM0tLgqCMTprUbY_PUk38zgE6d-CJqb_EHy7iCgtOv4T6n2YcJIaAnjGEALw_wcB">Book Your Trip Here!</a></li>
-                  <li> <a href='#'>Food and drink</a></li>
-                  <li> <a href="CountryGuide.html">Country Guides</a></li>
-                  <li> <a href='#'>City guides</a></li>
-                  <li> <a href='#'>About us</a></li>
-              </ul>
-          </div>
-        </div>
-    </body>
+		<body>
+
+<ul>
+	<li><a href = "AustraliaGuide.html">Australia</a></li>
+	<li><a href = "BrazilGuide.html">Brazil</a></li>
+	<li>Canada</li>
+	<li>China</li>
+	<li>Croatia</li>
+	<li>England</li>
+	<li>Egypt</li>
+	<li>France</li>
+	<li>Greece</li>
+	<li>Indonesia</li>
+	<li>Ireland</li>
+	<li>Italy</li>
+	<li>Germany</li>
+	<li>Jamaica</li>
+	<li>Japan</li>
+	<li>Korea</li>
+	<li>Mexico</li>
+	<li>Morocco</li>
+	<li>Netherlands</li>
+	<li>New Zealand</li>
+	<li>Peru</li>
+	<li>Singapore</li>
+	<li>South Africa</li>
+	<li>Spain</li>
+	<li>Sri Lanka</li>
+	<li>Switzerland</li>
+	<li>Sweden</li>
+	<li>Thailand</li>
+	<li>Turkey</li>
+</ul>
+
+<div class="topnav">
+  <a class="active" href="TravelGuide.html">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
+
+		<div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px;height:100%;overflow:auto;">
+			<div class = "CountryList">
+				<div class="Banner">
+				<h1>Guidance for any people who love travelling!</h1>
+				<h2>The journey of a thousand miles begins with a single step.</h2>
+				<button type="button">Click Here to Sort the Links</button>
+				<button type="button">Click Here to Filter the Links</button>
+					<div class="links">
+						<ul>
+							<li> <a href="https://www.booking.com/index.html?aid=309654;label=booking-be-en-us-LTXkLmvAYJ_j203cfWaglgS166194690622:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tikwd-56055241:lp9015640:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfEJgM0tLgqCMTprUbY_PUk38zgE6d-CJqb_EHy7iCgtOv4T6n2YcJIaAnjGEALw_wcB">Book Your Trip Here!</a></li>
+							<li> <a href='#'>Food and drink</a></li>
+							<li> <a href="CountryGuide.html">Country Guides</a></li>
+							<li> <a href='#'>City guides</a></li>
+							<li> <a href='#'>About us</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
 
    
