--- a/CountryGuide.html
+++ b/CountryGuide.html
@@ -42,5 +42,16 @@
 	<li>Turkey</li>
 </ul>
 </div>
+<div class="topnav">
+  <a class="active" href="TravelGuide.html">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
 </body>
 </html>
