--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -40,7 +40,7 @@
 
 <div class="topnav">
   <a class="active" href="TravelGuide.html">Home</a>
-  <a href="#about">About</a>
+  <a href="About.html">About</a>
   <a href="#contact">Contact</a>
   <div class="search-container">
     <form action="/action_page.php">
