--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
 <ul>
 	<li><a href = "AustraliaGuide.html">Australia</a></li>
 	<li><a href = "BrazilGuide.html">Brazil</a></li>
-	<li>Canada</li>
+	<li><a href = "CanadaGuide.html">Canada</a></li>
 	<li>China</li>
 	<li>Croatia</li>
 	<li>England</li>
