--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -10,8 +10,8 @@
 	<li><a href = "AustraliaGuide.html">Australia</a></li>
 	<li><a href = "BrazilGuide.html">Brazil</a></li>
 	<li><a href = "CanadaGuide.html">Canada</a></li>
-	<li>China</li>
-	<li>Croatia</li>
+	<li><a href = "ChinaGuide.html">China</a></li>
+	<li><a href = "CroatiaGuide.html">Croatia</a></li>
 	<li>England</li>
 	<li>Egypt</li>
 	<li>France</li>
