--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -11,8 +11,8 @@
 	<li><a href = "AustraliaGuide.html">Australia</a></li>
 	<li><a href = "BrazilGuide.html">Brazil</a></li>
 	<li><a href = "CanadaGuide.html">Canada</a></li>
-	<li>China</li>
-	<li>Croatia</li>
+	<li><a href = "ChinaGuide.html">China</a></li>
+	<li><a href = "CroatiaGuide.html">Croatia</a></li>
 	<li>England</li>
 	<li>Egypt</li>
 	<li>France</li>
@@ -41,7 +41,7 @@
 
 <div class="topnav">
   <a class="active" href="TravelGuide.html">Home</a>
-  <a href="#about">About</a>
+  <a href="About.html">About</a>
   <a href="#contact">Contact</a>
   <div class="search-container">
     <form action="/action_page.php">
