--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -13,11 +13,11 @@
 	<li><a href = "CanadaGuide.html">Canada</a></li>
 	<li><a href = "ChinaGuide.html">China</a></li>
 	<li><a href = "CroatiaGuide.html">Croatia</a></li>
-	<li>England</li>
-	<li>Egypt</li>
-	<li>France</li>
-	<li>Greece</li>
-	<li>Indonesia</li>
+	<li><a href = "EnglandGuide.html">England</a></li>
+	<li><a href = "EgyptGuide.html">Egypt</a></li>
+	<li><a href = "FranceGuide.html">France</a></li>
+	<li><a href = "GreeceGuide.html">Greece</a></li>
+	<li><a href = "IndonesiaGuide.html">Indonesia</a></li>
 	<li>Ireland</li>
 	<li>Italy</li>
 	<li>Germany</li>
