--- a/EnglandGuide.html
+++ b/EnglandGuide.html
@@ -1,9 +1,8 @@
-<!-- Rachel Jones 03/14/2023-->
+<!-- Rachel Jones 03/28/2023-->
 <!DOCTYPE html>
 <html>
-
 <head>
-<title>CroatiaGuide</title>
+<title>EnglandGuide</title>
 <link rel = stylesheet href = "style.css">
 </head>
 
@@ -54,43 +53,42 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
-<h1>Popular Cities in Croatia</h1>
+<h1>Popular Cities in England</h1>
 <br>
-<h3>Places to Visit in Zagreb</h3>
+<h3>Places to Visit in </h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Croatia/BrokenRelationships.jpg" alt = "Museum of Broken Relationships" style = "height: 80% width: 75%">
-		<p>Museum of Broken Relationships</p>
+		<img src = "Images/England/" alt = "" style = "height: 80% width: 75%">
+		<p></p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Croatia/CathedralOfZagreb.jpg" alt = "Cathedral of Zagreb" style = "width: 75%">
-		<p>Cathedral of Zagreb</p>
+		<img src = "Images/England/" alt = "" style = "width: 75%">
+		<p></p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Croatia/FacultyOfScience.jpg" alt = "Botanical Garden of the Faculty of Science" style = "width: 75%">
-		<p>Botanical Garden of the Faculty of Science</p>
+		<img src = "Images/England/" alt = "" style = "width: 75%">
+		<p></p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in Dubrovnik</h3>
+<h3>Places to Visit in </h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Croatia/CableCar.jpg" alt = "Dubrovnik Cable Car" style = "height: 100% width: 100%">
-		<p>Dubrovnik Cable Car</p>
+		<img src = "Images/England/" alt = "" style = "height: 100% width: 100%">
+		<p></p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Croatia/VirginMaryCathedral.jpg" alt = "The Cathedral of the Assumption of the Virgin Mary" style = "width: 75%">
-		<p>The Cathedral of the Assumption of the Virgin Mary</p>
+		<img src = "Images/England/" alt = "" style = "width: 75%">
+		<p></p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Croatia/Lovrijenac.jpg" alt = "Lovrijenac" style = "width: 75%">
-		<p>Lovrijenac</p>
+		<img src = "Images/England/" alt = "" style = "width: 75%">
+		<p></p>
 	</div>
 </div>
 </div>
 
 </body>
-
 </html>
