Added 5 new country html pages

--- a/EgyptGuide.html
+++ b/EgyptGuide.html
@@ -55,40 +55,52 @@
 <div class = "CountryList">
 <h1>Popular Cities in Egypt</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Cairo</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Egypt/" alt = "" style = "height: 80% width: 75%">
-		<p></p>
+		<img src = "Images/Egypt/EgyptianMuseum.jpg" alt = "The Egyptian Museum">
+		<p>The Egyptian Museum</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Egypt/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Egypt/KhanEl-Khalili.jpg" alt = "Khan el-Khalili">
+		<p>Khan el-Khalili</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Egypt/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Egypt/SphinxOfGiza.jpg" alt = "Great Sphinx of Giza">
+		<p>Great Sphinx of Giza</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Luxor</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Egypt/" alt = "" style = "height: 100% width: 100%">
-		<p></p>
+		<img src = "Images/Egypt/KarnakTemple.jpg" alt = "Karnak Temple">
+		<p>Karnak Temple</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Egypt/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Egypt/ValleyOfKings.jpg" alt = "Valley of the Kings">
+		<p>Valley of the Kings</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Egypt/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Egypt/HatshepsutTemple.jpg" alt = "Queen Hatshepsut Temple">
+		<p>Queen Hatshepsut Temple</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Alexandria</h3>
+<br>
+<div class = "row">
+	<div class = "column">
+		<img src = "Images/Egypt/AlexandriaLibrary.jpg" alt = "Alexandria Library">
+		<p>Alexandria Library</p>
+	</div>
+	<div class = "column">
+		<img src = "Images/Egypt/MontazaPalace.jpg" alt = "Montaza Palace">
+		<p>Montaza Palace</p>
 	</div>
 </div>
 </div>
-
 </body>
 </html>
