--- a/EnglandGuide.html
+++ b/EnglandGuide.html
@@ -55,37 +55,33 @@
 <div class = "CountryList">
 <h1>Popular Cities in England</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in London</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/England/" alt = "" style = "height: 80% width: 75%">
-		<p></p>
+		<img src = "Images/England/BritishMuseum.jpg" alt = "The British Museum">
+		<p>The British Museum</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/England/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/England/LondonEye.jpg" alt = "London Eye">
+		<p>London Eye</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/England/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/England/HydePark.jpg" alt = "Hyde Park">
+		<p>Hyde Park</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Birmingham</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/England/" alt = "" style = "height: 100% width: 100%">
-		<p></p>
+		<img src = "Images/England/BirminghamBotanical.jpg" alt = "The Birmingham Botanical Garden">
+		<p>The Birmingham Botanical Garden</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/England/" alt = "" style = "width: 75%">
-		<p></p>
-	</div>
-	<div class = "column">
-		<img src = "Images/England/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/England/BirminghamLibrary.jpg" alt = "Library of Birmingham">
+		<p>Library of Birmingham</p>
 	</div>
 </div>
 </div>
