--- a/FranceGuide.html
+++ b/FranceGuide.html
@@ -55,37 +55,41 @@
 <div class = "CountryList">
 <h1>Popular Cities in France</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Paris</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/France/" alt = "" style = "height: 80% width: 75%">
-		<p></p>
+		<img src = "Images/France/Louvre.jpg" alt = "The Louvre">
+		<p>The Louvre</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/France/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/France/EiffelTower.jpg" alt = "The Eiffel Tower">
+		<p>The Eiffel Tower</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/France/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/France/ArcDeTriomphe.jpg" alt = "Arc de Triomphe">
+		<p>Arc de Triomphe</p>
+	</div>
+	<div class = "column">
+		<img src = "Images/France/NotreDameCathedral.jpg" alt = "Notre Dame Cathedral">
+		<p>Notre Dame Cathedral</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Lyon</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/France/" alt = "" style = "height: 100% width: 100%">
-		<p></p>
+		<img src = "Images/France/FineArtsMuseum.jpg" alt = "Museum of Fine Arts of Lyon">
+		<p>Museum of Fine Arts of Lyon</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/France/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/France/ParcDeLaTete.jpg" alt = "Parc de la Tête d'Or">
+		<p>Parc de la Tete d'Or</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/France/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/France/SaintJeanBaptisteCathedral.jpg" alt = "Saint-Jean-Baptiste Cathedral">
+		<p>Saint-Jean-Baptiste Cathedral</p>
 	</div>
 </div>
 </div>
