--- a/GreeceGuide.html
+++ b/GreeceGuide.html
@@ -55,39 +55,23 @@
 <div class = "CountryList">
 <h1>Popular Cities in Greece</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Athens</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Greece/" alt = "" style = "height: 80% width: 75%">
-		<p></p>
+		<img src = "Images/Greece/Olympieion.jpg" alt = "Olympieion">
+		<p>Olympieion</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Greece/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Greece/AncientAcropolis.jpg" alt = "Ancient Acropolis">
+		<p>Ancient Acropolis</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Greece/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Greece/NationalArchaeologicalMuseum.jpg" alt = "National Archaeological Museum">
+		<p>National Archaeological Museum</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
-<br>
-<div class = "row">
-	<div class = "column">
-		<img src = "Images/Greece/" alt = "" style = "height: 100% width: 100%">
-		<p></p>
-	</div>
-	<div class = "column">
-		<img src = "Images/Greece/" alt = "" style = "width: 75%">
-		<p></p>
-	</div>
-	<div class = "column">
-		<img src = "Images/Greece/" alt = "" style = "width: 75%">
-		<p></p>
-	</div>
-</div>
 </div>
 
 </body>
