--- a/IndonesiaGuide.html
+++ b/IndonesiaGuide.html
@@ -55,37 +55,24 @@
 <div class = "CountryList">
 <h1>Popular Cities in Indonesia</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Bali</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Indonesia/" alt = "" style = "height: 80% width: 75%">
-		<p></p>
+		<img src = "Images/Indonesia/WaterbomBali.jpg" alt = "Waterbom Bali">
+		<p>Waterbom Bali</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Indonesia/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Indonesia/UbudMonkeyForest.jpg" alt = "Ubud Monkey Forest">
+		<p>Ubud Monkey Forest</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Indonesia/" alt = "" style = "width: 75%">
-		<p></p>
-	</div>
-</div>
-<br>
-<h3>Places to Visit in </h3>
-<br>
-<div class = "row">
-	<div class = "column">
-		<img src = "Images/Indonesia/" alt = "" style = "height: 100% width: 100%">
-		<p></p>
+		<img src = "Images/Indonesia/TirtaEmpul.jpg" alt = "Tirta Empul">
+		<p>Tirta Empul</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Indonesia/" alt = "" style = "width: 75%">
-		<p></p>
-	</div>
-	<div class = "column">
-		<img src = "Images/Indonesia/" alt = "" style = "width: 75%">
-		<p></p>
+		<img src = "Images/Indonesia/NyangNyangBeach.jpg" alt = "Nyang Nyang Beach">
+		<p>Nyang Nyang Beach</p>
 	</div>
 </div>
 </div>
