--- a/FranceGuide.html
+++ b/FranceGuide.html
@@ -18,25 +18,25 @@
 	<li><a href = "FranceGuide.html">France</a></li>
 	<li><a href = "GreeceGuide.html">Greece</a></li>
 	<li><a href = "IndonesiaGuide.html">Indonesia</a></li>
-	<li>Ireland</li>
-	<li>Italy</li>
-	<li>Germany</li>
-	<li>Jamaica</li>
-	<li>Japan</li>
-	<li>Korea</li>
-	<li>Mexico</li>
-	<li>Morocco</li>
-	<li>Netherlands</li>
-	<li>New Zealand</li>
-	<li>Peru</li>
-	<li>Singapore</li>
-	<li>South Africa</li>
-	<li>Spain</li>
-	<li>Sri Lanka</li>
-	<li>Switzerland</li>
-	<li>Sweden</li>
-	<li>Thailand</li>
-	<li>Turkey</li>
+	<li><a href = "IrelandGuide.html">Ireland</a></li>
+	<li><a href = "ItalyGuide.html">Italy</a></li>
+	<li><a href = "GermanyGuide.html">Germany</a></li>
+	<li><a href = "JamaicaGuide.html">Jamaica</a></li>
+	<li><a href = "JapanGuide.html">Japan</a></li>
+	<li><a href = "KoreaGuide.html">Korea</a></li>
+	<li><a href = "MexicoGuide.html">Mexico</a></li>
+	<li><a href = "MoroccoGuide.html">Morocco</a></li>
+	<li><a href = "NetherlandsGuide.html">Netherlands</a></li>
+	<li><a href = "NewZealandGuide.html">New Zealand</a></li>
+	<li><a href = "PeruGuide.html">Peru</a></li>
+	<li><a href = "SingaporeGuide.html">Singapore</a></li>
+	<li><a href = "SouthAfricaGuide.html">South Africa</a></li>
+	<li><a href = "SpainGuide.html">Spain</a></li>
+	<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>
+	<li><a href = "SwitzerlandGuide.html">Switzerland</a></li>
+	<li><a href = "SwedenGuide.html">Sweden</a></li>
+	<li><a href = "ThailandGuide.html">Thailand</a></li>
+	<li><a href = "TurkeyGuide.html">Turkey</a></li>
 </ul>
 
 <div class="topnav">
