--- a/GermanyGuide.html
+++ b/GermanyGuide.html
@@ -93,8 +93,8 @@
 		<p>Cologne Cathedral</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Germany/BelgianDistrict.jpg" alt = "Belgian District">
-		<p>Belgian District</p>
+		<img src = "Images/Germany/BelgianQuarter.jpg" alt = "Belgian Quarter">
+		<p>Belgian Quarter</p>
 	</div>
 	<div class = "column">
 		<img src = "Images/Germany/LudwigMuseum.jpg" alt = "Ludwig Museum">
