--- a/ItalyGuide.html
+++ b/ItalyGuide.html
@@ -55,27 +55,48 @@
 <div class = "CountryList">
 <h1>Popular Cities in Italy</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Rome</h3>
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Italy/" alt = "">
-		<p></p>
+		<img src = "Images/Italy/Colosseum.jpg" alt = "The Colosseum">
+		<p>The Colosseum</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Italy/" alt = "">
-		<p></p>
+		<img src = "Images/Italy/TreviFountain.jpg" alt = "Trevi Fountain">
+		<p>Trevi Fountain</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Italy/" alt = "">
-		<p></p>
+		<img src = "Images/Italy/LastJudgment.jpg" alt = "The Last Judgment">
+		<p>The Last Judgment</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Venice</h3>
+<br>
+<div class = "row">
+	<div class = "column">
+		<img src = "Images/Italy/RialtoBridge.jpg" alt = "Rialto Bridge">
+		<p>Rialto Bridge</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Italy/" alt = "">
-		<p></p>
+		<img src = "Images/Italy/GondolaTours.jpg" alt = "Gondola Tours">
+		<p>Gondola Tours</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Naples</h3>
+<br>
+<div class = "row">
+	<div class = "column">
+		<img src = "Images/Italy/PompeiiTour.jpg" alt = "Pompeii Tour">
+		<p>Pompeii Tour</p>
+	</div>
+	<div class = "column">
+		<img src = "Images/Italy/CookingClasses.jpg" alt = "Cookings Classes">
+		<p>Cooking Classes</p>
 	</div>
 </div>
 </div>
-
 </body>
 </html>
