--- a/ItalyGuide.html
+++ b/ItalyGuide.html
@@ -67,8 +67,8 @@
 		<p>Trevi Fountain</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Italy/LastJudgment.jpg" alt = "The Last Judgment">
-		<p>The Last Judgment</p>
+		<img src = "Images/Italy/SistineChapel.jpg" alt = "Sistine Chapel">
+		<p>Sistine Chapel</p>
 	</div>
 </div>
 <br>
@@ -89,12 +89,12 @@
 <br>
 <div class = "row">
 	<div class = "column">
-		<img src = "Images/Italy/PompeiiTour.jpg" alt = "Pompeii Tour">
-		<p>Pompeii Tour</p>
+		<img src = "Images/Italy/Pompeii.jpg" alt = "Pompeii">
+		<p>Pompeii</p>
 	</div>
 	<div class = "column">
-		<img src = "Images/Italy/CookingClasses.jpg" alt = "Cookings Classes">
-		<p>Cooking Classes</p>
+		<img src = "Images/Italy/MountVesuvius.jpg" alt = "Mount Vesuvius">
+		<p>Mount Vesuvius</p>
 	</div>
 </div>
 </div>
