--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,7 @@
 <div class="topnav">
   <a class="active" href="TravelGuide.html">Home</a>
   <a href="About.html">About</a>
-  <a href="Contact.html">Contact</a>
+  <a href="#contact">Contact</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
@@ -54,12 +54,11 @@
 			<div class = "CountryList">
 				<div class="Banner">
 				<h1>This is a free website created by a group of Miami students</h1>
-                <p style="color: blue;">We are Caden, Chi, Rachel and Lauryn!</p>
-                    <p style="color: rebeccapurple;">Just enjoy the fun of playing around web editing</p>
+                <p style="color: blue;">Project Manager: Caden Nelson nelsonck@miamioh.edu</p>
+                <p style="color: rebeccapurple;">Tech Manager: Rachel Jones jonesre7@miamioh.edu</p>
+                <p style="color: red;">Lauryn Hillman hillmalj@miamioh.edu</p>
+                <p style="color: green;">Chi Zhang zhangc93@miamioh.edu</p>
 					<div class="links">
-						<ul>
-							<li> <a href='#'>About us</a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
