--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -41,7 +41,7 @@
 <div class="topnav">
   <a class="active" href="TravelGuide.html">Home</a>
   <a href="About.html">About</a>
-  <a href="#contact">Contact</a>
+  <a href="Contact.html">Contact</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
