--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -4,6 +4,26 @@
     <title> TravelGuide </title>
 	<!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
+        <script>
+            var countries = ["Australia", "Brazil", "Canada", "China", "Croatia","England","Egypt","France","Greece","Indonesia","Ireland","Italy","Germany","Jamaica","Japan","Korea","Mexico","Morocco","Netherlands","New Zealand","Peru","Singapore","South Africa","Spain","Sri Lanka","Switzerland","Sweden","Thailand","Turkey"];
+
+            function search() {
+            var input = document.getElementById("searchbar").value;
+            var found = false;
+
+            for (var i = 0; i < countries.length; i++) {
+            if (input.toLowerCase() == countries[i].toLowerCase()) {
+            window.location.href = countries[i] + "Guide.html";
+            found = true;
+            break;
+            }
+            }
+
+            if (!found) {
+            alert("Invalid input, please enter a correct name!");
+            }
+            }
+        </script>
         </head>
 		<body>
 
@@ -48,11 +68,11 @@
   </select>
   <a class="active" href="TravelGuide.html">Home</a>
   <a href="About.html">About</a>
-  <a href="#contact">Contact</a>
+  <a href="Contact.html">Contact</a>
   <div class="search-container">
-    <form action="/action_page.php">
-      <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
+    <form action="javascript:void(0);" id="search">
+      <input type="text" placeholder="Enter a country name" name="search-input" id="searchbar" onkeypress="if(event.keyCode==13){search();}">
+      <button type="button" onclick="search()">Search</button>
     </form>
   </div>
 </div>
