--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -4,30 +4,119 @@
     <title> TravelGuide </title>
 	<!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
-        <script>
-            var countries = ["Australia", "Brazil", "Canada", "China", "Croatia","England","Egypt","France","Greece","Indonesia","Ireland","Italy","Germany","Jamaica","Japan","Korea","Mexico","Morocco","Netherlands","New Zealand","Peru","Singapore","South Africa","Spain","Sri Lanka","Switzerland","Sweden","Thailand","Turkey"];
+		<script>
+			function sortList() {
+				var continent = [
+					'<li><a href = "EgyptGuide.html">Egypt</a></li>',
+					'<li><a href = "MoroccoGuide.html">Morocco</a></li>',
+					'<li><a href = "SouthAfricaGuide.html">South Africa</a></li>',
+					'<li><a href = "ChinaGuide.html">China</a></li>',
+					'<li><a href = "IndonesiaGuide.html">Indonesia</a></li>',
+					'<li><a href = "JapanGuide.html">Japan</a></li>',
+					'<li><a href = "KoreaGuide.html">Korea</a></li>',
+					'<li><a href = "MalaysiaGuide.html">Malaysia</a></li>',
+					'<li><a href = "SingaporeGuide.html">Singapore</a></li>',
+					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
+					'<li><a href = "ThailandGuide.html">Thailand</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>',
+					'<li><a href = "AustraliaGuide.html">Australia</a></li>',
+					'<li><a href = "NewZealandGuide.html">New Zealand</a></li>',
+					'<li><a href = "CroatiaGuide.html">Croatia</a></li>',
+					'<li><a href = "EnglandGuide.html">England</a></li>',
+					'<li><a href = "FranceGuide.html">France</a></li>',
+					'<li><a href = "GreeceGuide.html">Greece</a></li>',
+					'<li><a href = "IrelandGuide.html">Ireland</a></li>',
+					'<li><a href = "ItalyGuide.html">Italy</a></li>',
+					'<li><a href = "GermanyGuide.html">Germany</a></li>',
+					'<li><a href = "NetherlandsGuide.html">Netherlands</a></li>',
+					'<li><a href = "SpainGuide.html">Spain</a></li>',
+					'<li><a href = "SwitzerlandGuide.html">Switzerland</a></li>',
+					'<li><a href = "SwedenGuide.html">Sweden</a></li>',
+					'<li><a href = "CanadaGuide.html">Canada</a></li>',
+					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
+					'<li><a href = "MexicoGuide.html">Mexico</a></li>',
+					'<li><a href = "BrazilGuide.html">Brazil</a></li>',
+					'<li><a href = "PeruGuide.html">Peru</a></li>'
+				].join('');
+				var price = [
+					'<li><a href = "AustraliaGuide.html">Australia</a></li>',
+					'<li><a href = "FranceGuide.html">France</a></li>',
+					'<li><a href = "EnglandGuide.html">England</a></li>',
+					'<li><a href = "ItalyGuide.html">Italy</a></li>',
+					'<li><a href = "MexicoGuide.html">Mexico</a></li>',
+					'<li><a href = "SwitzerlandGuide.html">Switzerland</a></li>',
+					'<li><a href = "CanadaGuide.html">Canada</a></li>',
+					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
+					'<li><a href = "NetherlandsGuide.html">Netherlands</a></li>',
+					'<li><a href = "NewZealandGuide.html">New Zealand</a></li>',
+					'<li><a href = "ChinaGuide.html">China</a></li>',
+					'<li><a href = "SingaporeGuide.html">Singapore</a></li>',
+					'<li><a href = "IrelandGuide.html">Ireland</a></li>',
+					'<li><a href = "GermanyGuide.html">Germany</a></li>',
+					'<li><a href = "SwedenGuide.html">Sweden</a></li>',
+					'<li><a href = "JapanGuide.html">Japan</a></li>',
+					'<li><a href = "GreeceGuide.html">Greece</a></li>',
+					'<li><a href = "KoreaGuide.html">Korea</a></li>',
+					'<li><a href = "BrazilGuide.html">Brazil</a></li>',
+					'<li><a href = "MalaysiaGuide.html">Malaysia</a></li>',
+					'<li><a href = "PeruGuide.html">Peru</a></li>',
+					'<li><a href = "CroatiaGuide.html">Croatia</a></li>',
+					'<li><a href = "IndonesiaGuide.html">Indonesia</a></li>',
+					'<li><a href = "ThailandGuide.html">Thailand</a></li>',
+					'<li><a href = "SouthAfricaGuide.html">South Africa</a></li>',
+					'<li><a href = "MoroccoGuide.html">Morocco</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>',
+					'<li><a href = "SpainGuide.html">Spain</a></li>',
+					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
+					'<li><a href = "EgyptGuide.html">Egypt</a></li>'
+				].join('');
+				var popularity = [
+					'<li><a href = "FranceGuide.html">France</a></li>',
+					'<li><a href = "SpainGuide.html">Spain</a></li>',
+					'<li><a href = "ChinaGuide.html">China</a></li>',
+					'<li><a href = "ItalyGuide.html">Italy</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>',
+					'<li><a href = "MexicoGuide.html">Mexico</a></li>',
+					'<li><a href = "ThailandGuide.html">Thailand</a></li>',
+					'<li><a href = "GermanyGuide.html">Germany</a></li>',
+					'<li><a href = "EnglandGuide.html">England</a></li>',
+					'<li><a href = "JapanGuide.html">Japan</a></li>',
+					'<li><a href = "GreeceGuide.html">Greece</a></li>',
+					'<li><a href = "MalaysiaGuide.html">Malaysia</a></li>',
+					'<li><a href = "CanadaGuide.html">Canada</a></li>',
+					'<li><a href = "NetherlandsGuide.html">Netherlands</a></li>',
+					'<li><a href = "KoreaGuide.html">Korea</a></li>',
+					'<li><a href = "CroatiaGuide.html">Croatia</a></li>',
+					'<li><a href = "IndonesiaGuide.html">Indonesia</a></li>',
+					'<li><a href = "BrazilGuide.html">Brazil</a></li>',
+					'<li><a href = "SingaporeGuide.html">Singapore</a></li>',
+					'<li><a href = "MoroccoGuide.html">Morocco</a></li>',
+					'<li><a href = "SwitzerlandGuide.html">Switzerland</a></li>',
+					'<li><a href = "EgyptGuide.html">Egypt</a></li>',
+					'<li><a href = "IrelandGuide.html">Ireland</a></li>',
+					'<li><a href = "SouthAfricaGuide.html">South Africa</a></li>',
+					'<li><a href = "AustraliaGuide.html">Australia</a></li>',
+					'<li><a href = "SwedenGuide.html">Sweden</a></li>',
+					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
+					'<li><a href = "PeruGuide.html">Peru</a></li>',
+					'<li><a href = "NewZealandGuide.html">New Zealand</a></li>',
+					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>'
+				].join('');
+				var element = document.getElementById("sorting");
+				var val = element.options[element.selectedIndex].value;
+				if (val == "continent") {
+					document.getElementById("countryList").innerHTML = continent;
+				} else if (val == "price") {
+					document.getElementById("countryList").innerHTML = price;
+				} else if (val == "popularity") {
+					document.getElementById("countryList").innerHTML = popularity;
+				}
+			}
+		</script>
+</head>
+<body>
 
-            function search() {
-            var input = document.getElementById("searchbar").value;
-            var found = false;
-
-            for (var i = 0; i < countries.length; i++) {
-            if (input.toLowerCase() == countries[i].toLowerCase()) {
-            window.location.href = countries[i] + "Guide.html";
-            found = true;
-            break;
-            }
-            }
-
-            if (!found) {
-            alert("Invalid input, please enter a correct name!");
-            }
-            }
-        </script>
-        </head>
-		<body>
-
-<ul>
+<ul id="countryList">
 	<li><a href = "AustraliaGuide.html">Australia</a></li>
 	<li><a href = "BrazilGuide.html">Brazil</a></li>
 	<li><a href = "CanadaGuide.html">Canada</a></li>
@@ -44,6 +133,7 @@
 	<li><a href = "JamaicaGuide.html">Jamaica</a></li>
 	<li><a href = "JapanGuide.html">Japan</a></li>
 	<li><a href = "KoreaGuide.html">Korea</a></li>
+	<li><a href = "MalaysiaGuide.html">Malaysia</a></li>
 	<li><a href = "MexicoGuide.html">Mexico</a></li>
 	<li><a href = "MoroccoGuide.html">Morocco</a></li>
 	<li><a href = "NetherlandsGuide.html">Netherlands</a></li>
@@ -60,7 +150,7 @@
 </ul>
 
 <div class="topnav">
-  <label for="sorting">Sort by</label>
+  <button onclick="sortList()">Sort by</button>
   <select name="sorting" id="sorting">
 		<option value="continent">Continent</option>
 		<option value="price">Price</option>
@@ -68,13 +158,7 @@
   </select>
   <a class="active" href="TravelGuide.html">Home</a>
   <a href="About.html">About</a>
-  <a href="Contact.html">Contact</a>
-  <div class="search-container">
-    <form action="javascript:void(0);" id="search">
-      <input type="text" placeholder="Enter a country name" name="search-input" id="searchbar" onkeypress="if(event.keyCode==13){search();}">
-      <button type="button" onclick="search()">Search</button>
-    </form>
-  </div>
+  <a href="#contact">Contact</a>
 </div>
 
 		<div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px;height:100%;overflow:auto;">
@@ -83,17 +167,6 @@
 				<div class="Banner">
 				<h1>Guidance for any people who love travelling!</h1>
 				<h2>The journey of a thousand miles begins with a single step.</h2>
-				<button type="button">Click Here to Sort the Links</button>
-				<button type="button">Click Here to Filter the Links</button>
-					<div class="links">
-						<ul>
-							<li> <a href="https://www.booking.com/index.html?aid=309654;label=booking-be-en-us-LTXkLmvAYJ_j203cfWaglgS166194690622:pl:ta:p1:p22,563,000:ac:ap:neg:fi:tikwd-56055241:lp9015640:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIfTmYhvC5HOg;ws=&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfEJgM0tLgqCMTprUbY_PUk38zgE6d-CJqb_EHy7iCgtOv4T6n2YcJIaAnjGEALw_wcB">Book Your Trip Here!</a></li>
-							<li> <a href='#'>Food and drink</a></li>
-							<li> <a href="CountryGuide.html">Country Guides</a></li>
-							<li> <a href='#'>City guides</a></li>
-							<li> <a href='#'>About us</a></li>
-						</ul>
-					</div>
 				</div>
 			</div>
 		</div>
